# rayt

./: .gitignore  Cargo.toml  Plane.md  README.md  justfile
src/: bsdf.rs  camera.rs  cli.rs  const_vars.rs  hit.rs  light.rs  main.rs  maths.rs  objects.rs  ray.rs  renderer.rs  shaders.rs  utils.rs
src/objects/: mod.rs  plane.rs  sphere.rs
src/shaders/: blinnphong.rs  mod.rs  path_tracing.rs  phong.rs  whitted_style_ray_tracing.rs
