[package]
name = "rayt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
console = "0.15.7"
image = "0.24.6"
indicatif = "0.17.5"
minifb = "0.24.0"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
